rewrite some tests according to Chain of invocations pattern and Loadable Page